h1. Release Notes for Sirius Desktop

{toc:style=disc|minLevel=2|maxLevel=3}

This document contains the release notes for recent major releases of Sirius. See also "the release notes from previous versions":Release_Notes_Previous.html for details about older releases.

h2(#sirius7.4.8). Changes in Sirius  Desktop 7.4.8

Nothing.

h2(#sirius7.4.7). Changes in Sirius  Desktop 7.4.7

Nothing.

h2(#sirius7.4.6). Changes in Sirius  Desktop 7.4.6

h3. Specifiers-Visible Changes

* The 'interaction container mapping' has been added to the sequence diagram metamodel. It is configured like a container mapping. Its edit part deactivate user interaction. Its goal is to have a background container that graphically wraps around all sequence diagram element.

h3. Developer-Visible Changes

* The addition of an 'interaction container mapping' to the sequence metamodel introduced new API classes such as:</br>
	- @org.eclipse.sirius.diagram.sequence.business.internal.elements.InteractionContainer@ to determine a View element should be represented as an InteractionContainer; </br>
	- @org.eclipse.sirius.diagram.sequence.description.InteractionContainerMapping@ to specify an 'interaction container mapping' in a sequence diagram</br> 
	- @org.eclipse.sirius.diagram.sequence.ui.tool.internal.edit.part.InteractionContainerEditPart@ a custom edit part to deactivate user interaction as this custom "Container mapping is automatically resized depending on diagram element locations".

h2(#sirius7.4.5). Changes in Sirius  Desktop 7.4.5

h3. User-Visible Changes
